# agents_and_rag

./: .gitignore  .pdm-python  README.md  app.py  messing_around.ipynb  pyproject.toml  requirements.txt
agents/: agent_factory.py  agents.py  app.py  base_agent.py  explanation.ipynb  multi_agent_systems.py  single_agent_systems.py
agents/BabyAGI/: LCEL_babyagi.py  agents.py
agents/react/: react_agent.py  tools.py  youtube_helpers.py
agents/tools/: tools.py
data/: companies.csv  companies.db  for_sql.csv  index.pkl  process_faiss.ipynb  process_sql.ipynb
data/evaluation/trajectory_evaluators/: trajectory_evaluators.py  trajectory_evaluators_explanation.ipynb
data/faiss_descriptions_index_cut/: index.faiss  index.pkl
evaluation/ragas_evaluation/: explanation_2.ipynb
evaluation/ragas_evaluators/: ragas_evaluators.py
evaluation/trajectory_evaluation/: explanation.ipynb  trajectory_evaluators.py
evaluation/trajectory_evaluators/: trajectory_evaluators.py
evaluation/trulens_evaluation/: explanation_2.ipynb
tests/: explanation.ipynb  interactive_testing.ipynb  test_trajectory.py
